--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -77,6 +77,12 @@
         height: 44px;
         margin-left: 15px;
     }
+
+    &__cart {
+        min-width: 107px;
+        height: 44px;
+        font-size: initial;
+    }
 }
 
 .showdown {
