--- a/scss/pages/_logined.scss
+++ b/scss/pages/_logined.scss
@@ -31,6 +31,7 @@
         background: #fff;
 
         overflow-y: auto;
+        overscroll-behavior: contain;
 
         @include abstracts.screen(md) {
             width: 90%;
