--- a/scss/layout/_header-logined.scss
+++ b/scss/layout/_header-logined.scss
@@ -7,13 +7,6 @@
         margin: 20px 0 70px;
     }
 }
-.show {
-    display: block !important;
-}
-
-.hide + .filter__overlay {
-    display: none !important;
-}
 
 .filter {
     &-row {
@@ -148,12 +141,17 @@
     }
 
     &-menu {
+        user-select: none;
         margin-top: 30px;
 
         &__item {
             display: flex;
             flex-direction: column;
             gap: 30px;
+
+            &-icon {
+                padding: 10px;
+            }
         }
 
         &__title {
@@ -171,6 +169,10 @@
             display: flex;
             flex-direction: column;
             gap: 18px;
+
+            &.hide {
+                display: none;
+            }
         }
 
         &__checkbox {
@@ -206,23 +208,6 @@
         }
     }
 
-    &__separate {
-        margin: 30px 0;
-        height: 1px;
-        background: var(--color-5);
-
-        @include abstracts.screen(lg) {
-            margin: 10px 0 30px;
-        }
-    }
-
-    &__overlay {
-        position: fixed;
-        inset: 0;
-        z-index: 98;
-        background: rgba($color: #000000, $alpha: 0.4);
-    }
-
     // Filter tab-mob
     @include abstracts.screen(lg) {
         position: fixed;
@@ -232,6 +217,7 @@
         margin-top: 70px;
         overflow-y: auto;
         overscroll-behavior: contain;
+        border-radius: 0 12px 12px 0;
 
         opacity: 0;
         visibility: hidden;
@@ -243,11 +229,18 @@
             transition-duration: 0.3s;
         }
 
+        &__overlay {
+            position: fixed;
+            inset: 0;
+            z-index: -98;
+            background: rgba($color: #000000, $alpha: 0.4);
+        }
+
         &-inner {
             position: relative;
             padding: 20px;
             background: #fff;
-            border-radius: 0 12px 12px 0;
+            border-radius: inherit;
         }
     }
 
@@ -373,10 +366,12 @@
 
         &-wrap {
             @include abstracts.screen(lg) {
-                position: absolute;
-                z-index: 99;
-                top: 60px;
-                right: 0;
+                &.show {
+                    display: block !important;
+                    position: absolute;
+                    top: 60px;
+                    right: 0;
+                }
             }
         }
     }
