--- a/scss/pages/_blog.scss
+++ b/scss/pages/_blog.scss
@@ -165,6 +165,10 @@
 
     &-body {
         margin-top: 55px;
+
+        @include abstracts.screen(md) {
+            margin-top: 30px;
+        }
     }
 
     &-item {
@@ -201,5 +205,54 @@
         &__user {
             margin-top: 30px;
         }
+    }
+
+    &__social {
+        justify-content: center;
+        margin-top: 30px;
+    }
+
+    &-post {
+        padding: 0 7px;
+
+        &__heading {
+            margin: 160px 0 55px;
+            text-align: center;
+
+            @include abstracts.screen(lg) {
+                margin: 50px 0 30px;
+            }
+        }
+    }
+}
+
+.post-item {
+    margin-top: 55px;
+
+    @include abstracts.screen(lg) {
+        margin-top: 30px;
+    }
+
+    &__thumb {
+        position: relative;
+        padding-top: 61%;
+        border-radius: 12px;
+    }
+
+    &__img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        border-radius: inherit;
+    }
+
+    &__heading {
+        margin-top: 30px;
+        font-size: 2.6rem;
+        line-height: 1.138;
+        font-weight: 600;
     }
 }
